force-app/main/default/objects/Event_MDF__c/Event_MDF__c.object-meta.xml
<CustomObject>
    <label>Event MDF</label>
    <nameField>
        <displayFormat>MDF-{00000}</displayFormat>
        <label>Event MDF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event MDFs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>