force-app/main/default/objects/Event_MDF__c/fields/MDF_Amount__c.field-meta.xml
<CustomField>
    <fullName>MDF_Amount__c</fullName>
    <label>MDF Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>