force-app/main/default/objects/Event_MDF__c/fields/MDF_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>MDF_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account which the Market Development Fund (MDF) is associated</inlineHelpText>
    <label>MDF Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event MDFs</relationshipLabel>
    <relationshipName>Event_MDFs</relationshipName>
    <type>Lookup</type>
</CustomField>