force-app/main/default/objects/Event_MDF__c/fields/Received_Payment__c.field-meta.xml
<CustomField>
    <fullName>Received_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Payment</label>
    <type>Checkbox</type>
</CustomField>